A6537:55 PM252 653p9PM7:55 PMe

--- a/configs/helper.conf
+++ b/configs/helper.conf
@@ -53,7 +53,7 @@ YES=true    ### Can be used to enable additional Package Installation by default
 CENTRAL_LOG="$LOG_DIR/system.log"   ### Optional: Central log for all scripts ###
 LOG_LEVEL="INFO"                    ### Log Level ###
 
-WRAPPER_DIR="SCRIPTS_DIR/wrapper"
+WRAPPER_DIR="SCRIPTS_DIR/templates"
 
 
 ################################################################################
