A2091:34 PM253 209p10PM1:34 PMe

--- a/configs/helper.conf
+++ b/configs/helper.conf
@@ -145,6 +145,12 @@ REQUIRED_COMMANDS=(
     "python3"
 )
 
+REQUIRED_PACKAGES=(
+    "acl" "acl"
+    "sudo" "sudo"
+    "ssh" "openssh-server, openssh-client"
+)
+
 ### Minimum disk space (in MB) ###
 MIN_DISK_SPACE="5000"
 MIN_MEMORY="2000"
