A8534:03 PM253 853p10PM4:03 PMe

--- a/configs/helper.conf
+++ b/configs/helper.conf
@@ -55,6 +55,23 @@ LOG_LEVEL="INFO"                    ### Log Level ###
 
 WRAPPER_DIR="SCRIPTS_DIR/templates"
 
+SUDOERS_PATH="/etc/sudoers.d"   ### Default Sudoers File Path ###
+
+
+################################################################################
+### === USER & PERMISSIONS === ###
+################################################################################
+
+DEFAULT_GROUP_SUFFIX="-admin" ### Default Group Suffix for Secure Function ###
+
+
+################################################################################
+### === SECURITY CONFIGURATION === ###
+################################################################################
+
+### Default Sudo Commands for Secure Function ###
+DEFAULT_SUDO_COMMANDS="/usr/bin/rsync,/usr/bin/cp,/usr/bin/mv,/usr/bin/mkdir,/usr/bin/rm"
+
 
 ################################################################################
 ### === GIT REPOSITORY MANAGEMENT === ###
