A3123:06 PM255 312p12PM3:06 PMe

--- a/configs/helper.conf
+++ b/configs/helper.conf
@@ -131,6 +131,25 @@ LOG_MAX_FILES="10"
 
 
 ################################################################################
+### === LOG FORMATTING CONFIGURATION === ###
+################################################################################
+
+### Enable Tab Formatting ###
+LOG_USE_TABS=true                                ### Enable/disable Tab Formatting ###
+
+### Tab Positions (column positions) ###
+LOG_TAB1=01                                      ### Position Timestamp ###
+LOG_TAB2=25                                      ### Position Script name ###
+LOG_TAB3=40                                      ### Position log level ###
+LOG_TAB4=50                                      ### Position Parameters ###
+LOG_TAB5=62                                      ### Position Comments ###
+LOG_TAB6=75                                      ### Position Additional ###
+
+### Alternative: Use real tabs instead of spaces ###
+LOG_USE_REAL_TABS=false                          ### Use \t instead of spaces ###
+
+
+################################################################################
 ### === VALIDATION AND CHECKS === ###
 ################################################################################
 
