--- a/configs/helper.conf
+++ b/configs/helper.conf
@@ -135,18 +135,14 @@ LOG_MAX_FILES="10"
 ################################################################################
 
 ### Enable Tab Formatting ###
-LOG_USE_TABS=true                                ### Enable/disable Tab Formatting ###
+LOG_USE_TABS=true                     ### Enable/disable Tab Formatting ###
 
-### Tab Positions (column positions) ###
-LOG_TAB1=01                                      ### Position Timestamp ###
-LOG_TAB2=25                                      ### Position Script name ###
-LOG_TAB3=40                                      ### Position log level ###
-LOG_TAB4=50                                      ### Position Parameters ###
-LOG_TAB5=62                                      ### Position Comments ###
-LOG_TAB6=75                                      ### Position Additional ###
+### Tab Positions Array (Column Positions) ###
+### Timestamp, Script Name, Log Level, Parameters, Comments, Additional ###
+LOG_TAB_POS=(1 25 40 50 62 75)
 
-### Alternative: Use real tabs instead of spaces ###
-LOG_USE_REAL_TABS=false                          ### Use \t instead of spaces ###
+### Alternative: Use real Tabs instead of Spaces ###
+LOG_USE_REAL_TABS=false                   ### Use \t instead of spaces ###
 
 
 ################################################################################
