A0073:23 PM255 007p12PM3:23 PMe

--- a/configs/helper.conf
+++ b/configs/helper.conf
@@ -124,7 +124,7 @@ RELEASE_COMMIT_PREFIX="[RELEASE]"
 
 ### Log settings ###
 LOG_LEVEL="INFO"
-LOG_FORMAT="timestamp"
+LOG_FORMAT="timestamp"                  ### default timestamp, iso8601, unix ###
 LOG_ROTATION="true"
 LOG_MAX_SIZE="100M"
 LOG_MAX_FILES="10"
