--- a/configs/helper.conf
+++ b/configs/helper.conf
@@ -82,6 +82,7 @@ GITCLONE_SCRIPT="$WORKFLOW_DIR/gitclone.sh"
 
 ### Git repository settings ###
 REPO_URL="https://github.com/Tabes/Helper.git"
+REPO_RAW_URL="https://raw.githubusercontent.com/Tabes/Helper/refs/heads/main/scripts/helper"
 REPO_BRANCH="main"
 REPO_DEVELOP_BRANCH="develop"
 REPO_REMOTE_NAME="origin"
