A4951:44 PM256 495p13PM1:44 PMe

--- a/configs/project.conf
+++ b/configs/project.conf
@@ -56,4 +56,14 @@ PROJECT_CONFIG="$CONFIGS_DIR/project.conf"
 HELPER_CONFIG="$CONFIGS_DIR/helper.conf"
 START_SCRIPT="$PROJECT_ROOT/start.sh"
 
+LOAD_CONFIG_DIRS=(
+    "$PROJECT_ROOT"             ### Project Root Path ###
+    "scripts/helper"
+    "scripts"
+    "utilities"
+)
 
+LOAD_CONFIG_PATTERN=(
+    "*.sh"                      ### Shell Scripts ###
+    "*.conf"                    ### Project Config Files ###
+)
