A0171:47 PM256 017p13PM1:47 PMe

--- a/configs/project.conf
+++ b/configs/project.conf
@@ -67,3 +67,7 @@ LOAD_CONFIG_PATTERN=(
     "*.sh"                      ### Shell Scripts ###
     "*.conf"                    ### Project Config Files ###
 )
+
+LOAD_CONFIG_EXCLUSION=(
+    "_*"
+)
