A9502:28 PM256 950p13PM2:28 PMe

--- a/configs/project.conf
+++ b/configs/project.conf
@@ -39,7 +39,7 @@ PROJECT_ROOT="/opt/helper"
 CONFIGS_DIR="$PROJECT_ROOT/configs"
 SCRIPTS_DIR="$PROJECT_ROOT/scripts"
 HELPER_SCRIPTS_DIR="$SCRIPTS_DIR/helper"
-WORKFLOW_DIR="$PROJECT_ROOT/utilities"
+UTILITIES_DIR="$PROJECT_ROOT/utilities"
 DOCS_DIR="$PROJECT_ROOT/docs"
 BACKUP_DIR="$PROJECT_ROOT/backups"
 HELP_FILE_DIR="$DOCS_DIR/help"
@@ -58,14 +58,15 @@ START_SCRIPT="$PROJECT_ROOT/start.sh"
 
 LOAD_CONFIG_DIRS=(
     "$PROJECT_ROOT"             ### Project Root Path ###
-    "scripts/helper"
-    "scripts"
-    "utilities"
+    "$CONFIGS_DIR"
+    "$SCRIPTS_DIR"
+    "$HELPER_SCRIPTS_DIR"
+    "$UTILITIES_DIR"
 )
 
 LOAD_CONFIG_PATTERN=(
-    "*.sh"                      ### Shell Scripts ###
     "*.conf"                    ### Project Config Files ###
+    "*.sh"                      ### Shell Scripts ###
 )
 
 LOAD_CONFIG_EXCLUSION=(
