--- a/configs/helper.conf
+++ b/configs/helper.conf
@@ -4,15 +4,14 @@
 ### Provides global Variables, Paths, and default Values
 ################################################################################
 ### Project: Universal Helper Library
-### Version: 2.1.2
+### Version: 2.1.3
 ### Author:  Mawage (Development Team)
-### Date:    2025-09-02
+### Date:    2025-09-14
 ### License: MIT
 ### Usage:   Source this File to load Helper Configuration
+### Commit:  Central Project Configuration for Helper Library
 ################################################################################
 
-SCRIPT_VERSION="2.1.2"
-COMMIT="Central Project Configuration for Helper Library"
 
 ################################################################################
 ### === GENERAL HELPER VARIABLES === ###
