--- a/configs/project.conf
+++ b/configs/project.conf
@@ -5,15 +5,13 @@
 ### Provides Output, Logging, Validation, System, Network and Utility Functions
 ################################################################################
 ### Project: Universal Helper Library
-### Version: 2.1.0
+### Version: 2.1.1
 ### Author:  Mawage (Development Team)
-### Date:    2025-09-08
+### Date:    2025-09-14
 ### License: MIT
 ### Usage:   Source this File to Load Project Configuration
+### Commit:  Central Project Configuration for Helper Script Project
 ################################################################################
-
-SCRIPT_VERSION="2.1.0"
-COMMIT="Central Project Configuration for Helper Script Project"
 
 
 ################################################################################
