A7619:06 AM257 761p14AM9:06 AMe

--- a/configs/helper.conf
+++ b/configs/helper.conf
@@ -4,7 +4,7 @@
 ### Provides global Variables, Paths, and default Values
 ################################################################################
 ### Project: Universal Helper Library
-### Version: 2.1.3
+### Version: 2.1.4
 ### Author:  Mawage (Development Team)
 ### Date:    2025-09-14
 ### License: MIT
@@ -108,7 +108,6 @@ VERSION_SCHEME="semantic"
 ### Auto update behavior ###
 AUTO_UPDATE_ENABLED="true"
 AUTO_UPDATE_GITCLONE="true"
-AUTO_UPDATE_BUILDER="false"
 CHECK_UPDATE_INTERVAL="300"
 
 ### Commit message settings ###
@@ -151,10 +150,11 @@ LOG_USE_REAL_TABS=false                   ### Use \t instead of spaces ###
 
 ### Required directories ###
 REQUIRED_DIRS=(
-    "$CONFIGS_DIR"
-    "$WORKFLOW_DIR"
+    "$PROJECT_ROOT"          # Hinzufügen
+    "$CONFIGS_DIR" 
     "$SCRIPTS_DIR"
-    "$BACKUP_DIR"
+    "$UTILITIES_DIR"
+    "$BACKUP_DIR" 
     "$HELP_FILE_DIR"
     "$HELPER_SCRIPTS_DIR"
     "$LOG_DIR"
