A4589:28 AM257 458p14AM9:28 AMe

--- a/configs/helper.conf
+++ b/configs/helper.conf
@@ -4,7 +4,7 @@
 ### Provides global Variables, Paths, and default Values
 ################################################################################
 ### Project: Universal Helper Library
-### Version: 2.1.4
+### Version: 2.1.5
 ### Author:  Mawage (Development Team)
 ### Date:    2025-09-14
 ### License: MIT
@@ -77,7 +77,7 @@ DEFAULT_SUDO_COMMANDS="/usr/bin/rsync,/usr/bin/cp,/usr/bin/mv,/usr/bin/mkdir,/us
 ################################################################################
 
 ### Workflow scripts ###
-GITCLONE_SCRIPT="$WORKFLOW_DIR/gitclone.sh"
+GITCLONE_SCRIPT="$UTILITIES_DIR/gitclone.sh"
 
 ### Git repository settings ###
 REPO_URL="https://github.com/Tabes/Helper.git"
@@ -160,13 +160,17 @@ REQUIRED_DIRS=(
     "$LOG_DIR"
 )
 
-### Required files ###
+### Required Files ###
 REQUIRED_FILES=(
-    "$GITCLONE_SCRIPT"
     "$WORKFLOW_SCRIPT"
 )
 
-### System requirements ###
+### Optional Files ###
+OPTIONAL_FILES=(
+    "$GITCLONE_SCRIPT"
+)
+
+### System Requirements ###
 REQUIRED_COMMANDS=(
     "git"
     "curl"
