A02312:05 PM257 023p14PM12:05 PMe

--- a/configs/project.conf
+++ b/configs/project.conf
@@ -5,7 +5,7 @@
 ### Provides Output, Logging, Validation, System, Network and Utility Functions
 ################################################################################
 ### Project: Universal Helper Library
-### Version: 2.1.1
+### Version: 2.1.2
 ### Author:  Mawage (Development Team)
 ### Date:    2025-09-14
 ### License: MIT
@@ -26,6 +26,7 @@ PROJECT_EMAIL="tabes@mawage.de"
 PROJECT_COPYRIGHT="Mawage (Hosting & Concepts)"
 PROJECT_LICENSE="MIT"
 PROJECT_WEBSITE="https://github.com/Tabes/Helper.git"
+PROJECT_DOWNLOAD="https://raw.githubusercontent.com/Tabes/Helper/refs/heads/main"
 
 
 ################################################################################
