--- a/configs/helper.conf
+++ b/configs/helper.conf
@@ -4,7 +4,7 @@
 ### Provides global Variables, Paths, and default Values
 ################################################################################
 ### Project: Universal Helper Library
-### Version: 2.1.5
+### Version: 2.1.7
 ### Author:  Mawage (Development Team)
 ### Date:    2025-09-14
 ### License: MIT
@@ -17,7 +17,7 @@
 ### === GENERAL HELPER VARIABLES === ###
 ################################################################################
 
-### Position array for formatted output ###
+### Position Array for formatted Output ###
 POS=(4 7 21 35 47 62 77 88 99)
 
 ### Ruler and scaling for debugging ###
@@ -211,7 +211,7 @@ VALIDATE_CHECKSUMS="true"
 ### === INITIALIZATION === ###
 ################################################################################
 
-### Load project configuration ###
+### Load Project Configuration ###
 if [ "${BASH_SOURCE[0]}" = "${0}" ]; then
     echo "Project: $PROJECT_NAME v$PROJECT_VERSION"
     echo "Author:  $PROJECT_AUTHOR <$PROJECT_EMAIL>"
