--- a/configs/update.conf
+++ b/configs/update.conf
@@ -4,7 +4,7 @@
 ### Provides Repository URLs, Download Settings, Backup Configuration
 ################################################################################
 ### Project: Universal Helper Library
-### Version: 1.0.1
+### Version: 1.0.3
 ### Author:  Mawage (Development Team)
 ### Date:    2025-09-14
 ### License: MIT
@@ -18,7 +18,7 @@
 ################################################################################
 
 ### Update Repository URLs ###
-UPDATE_BASE_URL="${REPO_RAW_URL:-$PROJECT_DOWNLOAD"
+UPDATE_BASE_URL="${REPO_RAW_URL:-$PROJECT_DOWNLOAD}"
 UPDATE_BRANCH="${REPO_BRANCH:-main}"
 UPDATE_DEVELOP_BRANCH="${REPO_DEVELOP_BRANCH:-develop}"
 
