--- a/configs/project.conf
+++ b/configs/project.conf
@@ -5,7 +5,7 @@
 ### Provides Output, Logging, Validation, System, Network and Utility Functions
 ################################################################################
 ### Project: Universal Helper Library
-### Version: 2.1.3
+### Version: 2.1.4
 ### Author:  Mawage (Development Team)
 ### Date:    2025-09-14
 ### License: MIT
@@ -37,7 +37,7 @@ PROJECT_DOWNLOAD="https://raw.githubusercontent.com/Tabes/Helper/refs/heads/main
 PROJECT_ROOT="/opt/helper"
 CONFIGS_DIR="$PROJECT_ROOT/configs"
 SCRIPTS_DIR="$PROJECT_ROOT/scripts"
-HELPER_SCRIPTS_DIR="$SCRIPTS_DIR/helper"
+PLUGINS_DIR="$SCRIPTS_DIR/plugins"
 UTILITIES_DIR="$PROJECT_ROOT/utilities"
 DOCS_DIR="$PROJECT_ROOT/docs"
 BACKUP_DIR="$PROJECT_ROOT/backups"
@@ -59,7 +59,7 @@ LOAD_CONFIG_DIRS=(
     "$PROJECT_ROOT"             ### Project Root Path ###
     "$CONFIGS_DIR"
     "$SCRIPTS_DIR"
-    "$HELPER_SCRIPTS_DIR"
+    "$PLUGINS_DIR"
     "$UTILITIES_DIR"
 )
 
