A2511:40 PM259 251p16PM1:40 PMe

--- a/configs/helper.conf
+++ b/configs/helper.conf
@@ -4,7 +4,7 @@
 ### Provides global Variables, Paths, and default Values
 ################################################################################
 ### Project: Universal Helper Library
-### Version: 2.1.7
+### Version: 2.1.8
 ### Author:  Mawage (Development Team)
 ### Date:    2025-09-14
 ### License: MIT
@@ -156,7 +156,7 @@ REQUIRED_DIRS=(
     "$UTILITIES_DIR"
     "$BACKUP_DIR" 
     "$HELP_FILE_DIR"
-    "$HELPER_SCRIPTS_DIR"
+    "$PLUGINS_DIR"
     "$LOG_DIR"
 )
 
