A2885:43 PM260 288p17PM5:43 PMe

--- a/configs/helper.conf
+++ b/configs/helper.conf
@@ -34,6 +34,8 @@ readonly BU="${COLOR_BU:-\033[0;34m}"
 readonly CY="${COLOR_CY:-\033[0;36m}"
 readonly WH="${COLOR_WH:-\033[1;37m}"
 readonly MG="${COLOR_MG:-\033[0;35m}"
+readonly GR="${COLOR_GR:-\033[0;30m}"
+readonly BK="${COLOR_BK:-\033[1;30m}"
 
 ### Unicode symbols - can be overridden in project.conf ###
 readonly SYMBOL_SUCCESS="${SYMBOL_SUCCESS:-✓}"
