A7791:40 PM262 779p19PM1:40 PMe

--- a/configs/helper.conf
+++ b/configs/helper.conf
@@ -4,9 +4,9 @@
 ### Provides global Variables, Paths, and default Values
 ################################################################################
 ### Project: Universal Helper Library
-### Version: 2.1.9
+### Version: 2.1.10
 ### Author:  Mawage (Development Team)
-### Date:    2025-09-14
+### Date:    2025-09-19
 ### License: MIT
 ### Usage:   Source this File to load Helper Configuration
 ### Commit:  Central Project Configuration for Helper Library
@@ -18,7 +18,26 @@
 ################################################################################
 
 ### Position Array for formatted Output ###
-POS=(4 7 21 35 47 62 77 88 99)
+# POS=(4 7 21 35 47 62 77 88 99)
+declare -A POS=(
+    [P0]=2          # Position #0
+    [P1]=4          # Position #1
+    [P2]=7          # Position #2
+    [P3]=21         # Position #3
+    [P4]=35         # Position #4
+    [P5]=47         # Position #5
+    [P6]=62         # Position #6
+    [P7]=77         # Position #7
+    [P8]=88         # Position #8
+    [P9]=99         # Position #9
+    [File]=15       # File
+    [Version]=9     # Version
+    [Status]=14     # Status
+    [Path]=40       # Path
+    [Size]=10       # Size
+    [Modified]=20   # Modified
+)
+
 
 ### Ruler and scaling for debugging ###
 RULER='       10|       20|       30|       40|       50|       60|       70|       80|       90|      100|      110|      120|'
@@ -42,6 +61,23 @@ readonly SYMBOL_SUCCESS="${SYMBOL_SUCCESS:-✓}"
 readonly SYMBOL_ERROR="${SYMBOL_ERROR:-✗}"
 readonly SYMBOL_WARNING="${SYMBOL_WARNING:-⚠}"
 readonly SYMBOL_INFO="${SYMBOL_INFO:-ℹ}"
+
+### === Status Symbole === ###
+declare -A symbol=(
+    [ok]="✅"
+    [skipped]="⏩"
+    [failed]="❌"
+    [unknown]="❓"
+    [downloaded]="🟢"
+    [dry]="💧"
+    [backup]="📦"
+    [sourced]="📜"
+    [sucssess]="✓"
+    [error]="✗"
+    [warning]="⚠"
+    [info]="ℹ"
+)
+
 
 ### Interactive Dialog Variables ####
 YES=true    ### Can be used to enable additional Package Installation by default ###
