A3651:42 PM262 365p19PM1:42 PMe

--- a/configs/helper.conf
+++ b/configs/helper.conf
@@ -4,7 +4,7 @@
 ### Provides global Variables, Paths, and default Values
 ################################################################################
 ### Project: Universal Helper Library
-### Version: 2.1.10
+### Version: 2.1.11
 ### Author:  Mawage (Development Team)
 ### Date:    2025-09-19
 ### License: MIT
@@ -17,7 +17,7 @@
 ### === GENERAL HELPER VARIABLES === ###
 ################################################################################
 
-### Position Array for formatted Output ###
+### Absolute Positions (Array) for formatted Output ###
 # POS=(4 7 21 35 47 62 77 88 99)
 declare -A POS=(
     [P0]=2          # Position #0
