A9034:01 PM262 903p19PM4:01 PMe

--- a/configs/helper.conf
+++ b/configs/helper.conf
@@ -4,7 +4,7 @@
 ### Provides global Variables, Paths, and default Values
 ################################################################################
 ### Project: Universal Helper Library
-### Version: 3.0.0
+### Version: 3.0.1
 ### Author:  Mawage (Development Team)
 ### Date:    2025-09-19
 ### License: MIT
@@ -60,11 +60,11 @@ initialize_paths() {
 initialize_files() {
 
     declare -gA file=(
-        [central_log]="${path[logs]/system.log}"                ### System Logging File ###
-        [start]="${path[project]/start.sh}"                     ### Project initialization File ###
-        [gitclone]="${path[framework]/utilities/gitclone.sh}"   ### GitHub Workflow Manager ###
-        [dos2linux]="${path[framework]/utilities/dos2linux.sh}" ### DOS2Linux Converter ###
-        [downloads]="${path[framework]/utilities/downloads.sh}" ### Simple Download Manager ###
+        [central_log]="${path[logs]}/system.log}"                ### System Logging File ###
+        [start]="${path[project]}/start.sh}"                     ### Project initialization File ###
+        [gitclone]="${path[framework]}/utilities/gitclone.sh}"   ### GitHub Workflow Manager ###
+        [dos2linux]="${path[framework]}/utilities/dos2linux.sh}" ### DOS2Linux Converter ###
+        [downloads]="${path[framework]}/utilities/downloads.sh}" ### Simple Download Manager ###
     )
 
 }
@@ -169,28 +169,6 @@ LOG_USE_REAL_TABS=false                   ### Use \t instead of spaces ###
 ################################################################################
 ### === VALIDATION AND CHECKS === ###
 ################################################################################
-
-### Required directories ###
-REQUIRED_DIRS=(
-    "$PROJECT_ROOT"          # Hinzufügen
-    "$CONFIGS_DIR" 
-    "$SCRIPTS_DIR"
-    "$UTILITIES_DIR"
-    "$BACKUP_DIR" 
-    "$HELP_FILE_DIR"
-    "$PLUGINS_DIR"
-    "$LOG_DIR"
-)
-
-### Required Files ###
-REQUIRED_FILES=(
-    "$WORKFLOW_SCRIPT"
-)
-
-### Optional Files ###
-OPTIONAL_FILES=(
-    "$GITCLONE_SCRIPT"
-)
 
 ### System Requirements ###
 REQUIRED_COMMANDS=(
@@ -302,6 +280,7 @@ declare -A symbol=(
 
 ### Load Project Configuration ###
 if [ "${BASH_SOURCE[0]}" = "${0}" ]; then
+
     echo "Project: $PROJECT_NAME v$PROJECT_VERSION"
     echo "Author:  $PROJECT_AUTHOR <$PROJECT_EMAIL>"
     echo "Root:    $PROJECT_ROOT"
@@ -312,8 +291,10 @@ if [ "${BASH_SOURCE[0]}" = "${0}" ]; then
     echo "  Configs:  $CONFIGS_DIR" 
     echo "  Workflow: $WORKFLOW_DIR"
     echo "  Scripts:  $SCRIPTS_DIR"
+
 else
+
     ### Configuration loaded successfully ###
-    export PROJECT_CONFIG_LOADED="true"
-    export PROJECT_CONFIG_VERSION="$SCRIPT_VERSION"
+    export CONFIG_LOADED="true"
+
 fi
