A77810:22 PM263 778p20PM10:22 PMe

--- a/configs/helper.conf
+++ b/configs/helper.conf
@@ -4,9 +4,9 @@
 ### Provides global Variables, Paths, and default Values
 ################################################################################
 ### Project: Universal Helper Library
-### Version: 3.0.4
+### Version: 3.0.5
 ### Author:  Mawage (Development Team)
-### Date:    2025-09-19
+### Date:    2025-09-20
 ### License: MIT
 ### Usage:   Source this File to load Helper Configuration
 ### Commit:  Central Project Configuration for Helper Library
@@ -214,6 +214,8 @@ VALIDATE_CHECKSUMS="true"
 ### Absolute Positions (Array) for formatted Output ###
 # POS=(4 7 21 35 47 62 77 88 99)
 declare -gA POS=(
+    [_col]=1        # Save and restore Cursor Position (Column)
+    [_row]=1        # Save and restore Cursor Position (Row)
     [P0]=2          # Position #0
     [P1]=4          # Position #1
     [P2]=7          # Position #2
@@ -224,8 +226,6 @@ declare -gA POS=(
     [P7]=77         # Position #7
     [P8]=88         # Position #8
     [P9]=99         # Position #9
-    [col]=1         # Save and restore Cursor Position (Column)
-    [row]=1         # Save and restore Cursor Position (Row)
     [File]=15       # File
     [Version]=9     # Version
     [Status]=14     # Status
