A22510:30 PM263 225p20PM10:30 PMe

--- a/configs/helper.conf
+++ b/configs/helper.conf
@@ -4,7 +4,7 @@
 ### Provides global Variables, Paths, and default Values
 ################################################################################
 ### Project: Universal Helper Library
-### Version: 3.0.5
+### Version: 3.0.6
 ### Author:  Mawage (Development Team)
 ### Date:    2025-09-20
 ### License: MIT
@@ -214,8 +214,8 @@ VALIDATE_CHECKSUMS="true"
 ### Absolute Positions (Array) for formatted Output ###
 # POS=(4 7 21 35 47 62 77 88 99)
 declare -gA POS=(
-    [_col]=1        # Save and restore Cursor Position (Column)
-    [_row]=1        # Save and restore Cursor Position (Row)
+    [colx]=1        # Save and restore Cursor Position (Column)
+    [rowx]=1        # Save and restore Cursor Position (Row)
     [P0]=2          # Position #0
     [P1]=4          # Position #1
     [P2]=7          # Position #2
