A82110:33 PM263 821p20PM10:33 PMe

--- a/configs/helper.conf
+++ b/configs/helper.conf
@@ -214,8 +214,6 @@ VALIDATE_CHECKSUMS="true"
 ### Absolute Positions (Array) for formatted Output ###
 # POS=(4 7 21 35 47 62 77 88 99)
 declare -gA POS=(
-    [colx]=1        # Save and restore Cursor Position (Column)
-    [rowx]=1        # Save and restore Cursor Position (Row)
     [P0]=2          # Position #0
     [P1]=4          # Position #1
     [P2]=7          # Position #2
@@ -226,6 +224,8 @@ declare -gA POS=(
     [P7]=77         # Position #7
     [P8]=88         # Position #8
     [P9]=99         # Position #9
+    [col]=1         # Save and restore Cursor Position (Column)
+    [row]=1         # Save and restore Cursor Position (Row)
     [File]=15       # File
     [Version]=9     # Version
     [Status]=14     # Status
